@@ -59,6 +59,12 @@ if ( $id > 0 ) {
   }
 }
 
-do_redirect ( "$STARTVIEW.php" . ( $thisdate > 0 ? "?date=$thisdate" : "" ) );
+if ( strlen ( get_last_view() ) ) {
+  $url = get_last_view();
+} else {
+  $url = "$STARTVIEW.php" . ( $thisdate > 0 ? "?date=$thisdate" : "" );
+}
+
+do_redirect ( $url );
 exit;
 ?>
